spot and location relationship achieved
