# components/db-manager/main.go
@@ -52,17 +52,18 @@ func main() {
 	// r.HandleFunc("/attachment/{id}", api.AttachmentPut).Methods("PUT")
 	// r.HandleFunc("/attachment/{id}", api.AttachmentDelete).Methods("DELETE")
 
-	// r.HandleFunc("/spot", api.SpotPost).Methods("POST")
-	// r.HandleFunc("/spot", api.SpotGetAll).Methods("GET")
-	// r.HandleFunc("/spot/{id}", api.SpotGet).Methods("GET")
-	// r.HandleFunc("/spot/{id}", api.SpotDelete).Methods("DELETE")
-	// r.HandleFunc("/spot/{id}", api.SpotPut).Methods("PUT")
+	r.HandleFunc("/spot", api.SpotPost).Methods("POST")
+	r.HandleFunc("/spot", api.SpotGetAll).Methods("GET")
+	r.HandleFunc("/spot/{id}", api.SpotGet).Methods("GET")
+	r.HandleFunc("/spot/{id}", api.SpotPut).Methods("PUT")
+	r.HandleFunc("/spot/{id}", api.SpotDelete).Methods("DELETE")
 
 	r.HandleFunc("/location", api.LocationPost).Methods("POST")
 	r.HandleFunc("/location", api.LocationGetAll).Methods("GET")
 	r.HandleFunc("/location/{id}", api.LocationGet).Methods("GET")
-	r.HandleFunc("/location/{id}", api.LocationDelete).Methods("DELETE")
 	r.HandleFunc("/location/{id}", api.LocationPut).Methods("PUT")
+	r.HandleFunc("/location/{id}/ref", api.LocationPutRef).Methods("PUT")
+	r.HandleFunc("/location/{id}", api.LocationDelete).Methods("DELETE")
 
 	// r.HandleFunc("/task", api.TaskPost).Methods("POST")
 	// r.HandleFunc("/task", api.TaskGetAll).Methods("GET")
