# components/db-manager/pkg/api/docs/swagger.json
@@ -79,6 +79,21 @@
                         "schema": {
                             "$ref": "#/definitions/models.APIKnownLocations"
                         }
+                    },
+                    {
+                        "type": "integer",
+                        "description": "Reference ID (optional)",
+                        "name": "ref",
+                        "in": "query"
+                    },
+                    {
+                        "enum": [
+                            "spot"
+                        ],
+                        "type": "string",
+                        "description": "Reference Type",
+                        "name": "refType",
+                        "in": "query"
                     }
                 ],
                 "responses": {
@@ -185,6 +200,202 @@
                     }
                 }
             }
+        },
+        "/location/{id}/ref": {
+            "put": {
+                "description": "Update the ref in a location details by ID",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "location"
+                ],
+                "summary": "Update the ref",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "Location ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "type": "integer",
+                        "description": "Reference ID (optional)",
+                        "name": "ref",
+                        "in": "query",
+                        "required": true
+                    },
+                    {
+                        "enum": [
+                            "spot"
+                        ],
+                        "type": "string",
+                        "description": "Reference Type",
+                        "name": "refType",
+                        "in": "query",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/models.KnownLocations"
+                        }
+                    }
+                }
+            }
+        },
+        "/spot": {
+            "get": {
+                "description": "Get a list of all spots",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "spot"
+                ],
+                "summary": "Retrieve all spots",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/models.Spots"
+                            }
+                        }
+                    }
+                }
+            },
+            "post": {
+                "description": "Create a new spot",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "spot"
+                ],
+                "summary": "Create a spot",
+                "parameters": [
+                    {
+                        "description": "Spot data",
+                        "name": "spot",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/models.APISpots"
+                        }
+                    }
+                ],
+                "responses": {
+                    "201": {
+                        "description": "Created",
+                        "schema": {
+                            "$ref": "#/definitions/models.Spots"
+                        }
+                    }
+                }
+            }
+        },
+        "/spot/{id}": {
+            "get": {
+                "description": "Get spot details by ID",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "spot"
+                ],
+                "summary": "Retrieve a spot by ID",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "Spot ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/models.Spots"
+                        }
+                    }
+                }
+            },
+            "put": {
+                "description": "Update spot details by ID",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "spot"
+                ],
+                "summary": "Update a spot by ID",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "Spot ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "description": "Spot data",
+                        "name": "spot",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/models.APISpots"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/models.Spots"
+                        }
+                    }
+                }
+            },
+            "delete": {
+                "description": "Delete a spot and nullify its references in spots",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "spot"
+                ],
+                "summary": "Delete a spot by ID",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "Spot ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "204": {
+                        "description": "No Content",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
         }
     },
     "definitions": {
@@ -198,6 +409,17 @@
                 "longitude": {
                     "description": "Longitude as signed float",
                     "type": "number"
+                },
+                "name": {
+                    "type": "string"
+                }
+            }
+        },
+        "models.APISpots": {
+            "type": "object",
+            "properties": {
+                "description": {
+                    "type": "string"
                 },
                 "name": {
                     "type": "string"
@@ -225,6 +447,45 @@
                 },
                 "name": {
                     "type": "string"
+                },
+                "updatedAt": {
+                    "description": "Automatically managed by trigger",
+                    "type": "string"
+                }
+            }
+        },
+        "models.Spots": {
+            "type": "object",
+            "properties": {
+                "attachments": {
+                    "type": "array",
+                    "items": {
+                        "type": "integer"
+                    }
+                },
+                "createdAt": {
+                    "description": "Automatically generated",
+                    "type": "string"
+                },
+                "description": {
+                    "type": "string"
+                },
+                "id": {
+                    "description": "db + json",
+                    "type": "integer"
+                },
+                "location": {
+                    "description": "only json -\u003e Need to create the parse the json  to and from db",
+                    "type": "integer"
+                },
+                "name": {
+                    "type": "string"
+                },
+                "tasks": {
+                    "type": "array",
+                    "items": {
+                        "type": "integer"
+                    }
                 },
                 "updatedAt": {
                     "description": "Automatically managed by trigger",
