# components/db-manager/pkg/models/schema.go
@@ -1,13 +1,5 @@
 package models
 
-/*
-Input for chatGPT based on the structs from models.go
-
-Create the associated SQL instructions as a string schema to represent the following data in a
-postgresql db using Go and the sqlx module. Make sure that all databases include an addition uuid
-as primary key and that they all autoinclude a column for the first update and last updated
-I want created_at and updated_at to be automatically generated by the database
-*/
 const Schema = `
 CREATE EXTENSION IF NOT EXISTS "uuid-ossp"; -- Enable UUID generation
 
